@@ -1,3 +1,10 @@
+2008-02-21  David Walluck  <david@jpackage.org>
+
+	PR classpath/27204:
+	* m4/acinclude.m4:
+	(REGEN_WITH_JAY): Handle 'yes' as a default,
+	not a directory and give more user-friendly output.
+	
 2008-02-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/java/util/regex/REException.java:
